# 1.1.0
- Hive database has been added to the project to prevent data loss during version transitions.

# 1.0.41
- Minor Changes

# 1.0.4
- Refactoring and Bug Fix
- The issue of data discrepancies during version transitions has been resolved.
- The system no longer creates a new account for the guest user every time.
- The issue of the same spells appearing in Challenger mode has been resolved.

# 1.0.2 (Bug Fix)

- The problem of achievements being reset during login has been resolved.
- The issue of time not decreasing and remaining constant in combo mode has been fixed.
- The incorrect calculation of the duration in combo mode has been fixed.
- Now, if no login is made, the system creates a new account for the user each time.

# 1.0.0 (Major Update)

- Added a new game mode called "Combo Mode."
- Implemented password reset feature.
- Made code improvements.
- Fixed minor bugs.
- Updated user model.
- Introduced new achievements.
- Made changes to certain items and spells. (Boss Battle Mode)
- Removed the exit button from the main menu and replaced it with the Combo Mode.
- Added the label "Endless" next to the Training button.

# 0.0.5+8
- Experience gain reduced in boss battles.
- Minor bugs fixed.
- An unnecessary package has been removed.
- Fixed a typo.

# 0.0.4+5
- Added functionality to save and resume the game for the boss battle mode.
- Database display issue fixed due to incorrect table name usage.

# 0.0.3+4
- Fixed minor bugs.
- Changed some achievement values.
- Buffed some items. (Boss Battle Mode)
- Increased base damage, base mana, and base mana regen. (Boss Battle Mode)
- Minor code refactoring.
- Unnecessary files removed.

# 0.0.2+3
- Fixed the positions of related elements to match the desired skills. QQW and QWQ (Ghost Walk) now correspond to the same spell.
- Added 'Rate on Store' button to settings menu. 
- Added show password toggle button to password input field.
- Changed app display name to Invoker Challenge