@@ -3,7 +3,7 @@ description: DOTA 2 Invoker practice game.
 
 publish_to: 'none'
 
-version: 1.1.0+15
+version: 1.1.0+16
 
 environment:
   sdk: '>=3.0.0-0 <4.0.0'
